# AVX-Experimentation

./: CMakeLists.txt  CMakeSettings.json
include/: LowPassFilter.h  TimeUtils.h  ex1_rawIntrinsics.h  pgm.h
src/: LowPassFilter.cpp  main.cpp  pgm.cpp
